crates/deadline-cli/tests/snapshots/cli_job_actions__job_cancel_get_job_fails_prints_error_with_suggestions.snap
---
source: crates/deadline-cli/tests/cli_job_actions.rs
info:
  program: deadline
  args:
    - job
    - cancel
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:64760"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:64760"
    AWS_ENDPOINT_URL_STS: "http://localhost:64760"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmphdvOd9/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmphdvOd9
---
success: false
exit_code: 1
----- stdout -----
Failed to get Job from Deadline:
ResourceNotFoundException: Job not found
Recent jobs in queue queue-abc:
  job-real  Real Job

----- stderr -----
